@@ -50,14 +50,14 @@ map_port: 5121
 
 //Preferred map loading method
 // 0: Read directly from grf
-// 1: Read from cache (without compression)
-// 2: Read from cache (with compression)
+// 1: Read from cache (with compression)
+// 2: Read from cache (without compression)
 // If the cache was not found it will read the maps from the GRF and copy
 // any necessary data into a newly created cache.
 // It is possible to reduce the map cache to 1MB for 400+ maps with compression
 // enabled. If all maps are already loaded in the cache, Athena can boot without
 // reading the grf files.
-read_map_from_cache: 2
+read_map_from_cache: 1
 //
 //Where is the bitmap file stored?
 map_cache_file: db/mapinfo.txt
