@@ -268,6 +268,7 @@ bUnstripableWeapon	2034
 bUnstripableArmor	2035
 bUnstripableHelm	2036
 bUnstripableShield	2037
+bIntravision	2038
 
 
 Eff_Stone	0
